--- a/static/index.html
+++ b/static/index.html
@@ -11,20 +11,19 @@
 </head>
 <body>
     <div class="app">
-        <div class="screen app__intro">
-            <div class="intro">
-                <div class="intro__header">
-                    Насколько вы разбираетесь в гротесках
-                </div>
-                <div class="intro__descr">
-                    Для неопытного глаза, все гротески на одно лицо. 
-                    Но бывалый дизайнер легко сможет их отличить. Или нет?
-                </div>
-                <button class="button button_type_primary intro__start" disabled>Загрузка данных...</button>
+        <div class="screen app__intro intro">
+            <div class="intro__header">
+                Насколько вы разбираетесь в гротесках
             </div>
+            <div class="intro__descr">
+                Для неопытного глаза, все гротески на одно лицо. 
+                Но бывалый дизайнер легко сможет их отличить. Или нет?
+            </div>
+            <button class="button button_type_primary intro__start" disabled>Загрузка данных...</button>
         </div>   
-        <div class="screen app__test">
+        <div class="screen app__test test">
         </div>   
+        <div class="screeen app__compare compare"></div>
         <div class="app__imageLoader"></div>
     </div>
 </body>
